# RustyUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  STATUS.md  TASK_8_3_IMPLEMENTATION_SUMMARY.md  TESTING.md
.github/workflows/: ci.yml  release.yml
crates/rustyui-adapters/: Cargo.toml
crates/rustyui-adapters/proptest-regressions/: property_tests.txt  property_tests_framework_integration.txt
crates/rustyui-adapters/src/: egui_adapter.rs  egui_components.rs  iced_adapter.rs  lib.rs  property_tests.rs  property_tests_framework_integration.rs  slint_adapter.rs  tauri_adapter.rs  traits.rs
crates/rustyui-adapters/tests/: egui_integration_test.rs
crates/rustyui-cli/: Cargo.toml  README.md  TASK_8_1_COMPLETION.md
crates/rustyui-cli/examples/: cli_usage.rs
crates/rustyui-cli/src/: config.rs  error.rs  lib.rs  main.rs  project.rs  template.rs  workflow.rs
crates/rustyui-cli/src/commands/: dev.rs  init.rs  mod.rs  new.rs  verify.rs
crates/rustyui-cli/tests/: cli_structure_tests.rs  end_to_end_tests.rs  integration_tests.rs  workflow_integration_test.rs
crates/rustyui-core/: Cargo.toml
crates/rustyui-core/benches/: production_vs_development.rs
crates/rustyui-core/proptest-regressions/: property_tests_cross_platform.txt  property_tests_dual_mode.txt  property_tests_performance_bounds.txt  property_tests_simple.txt  property_tests_state_preservation.txt  property_tests_zero_overhead.txt
crates/rustyui-core/src/: build_config.rs  change_analyzer.rs  change_monitor.rs  component_lifecycle.rs  config.rs  cross_platform.rs  engine.rs  error.rs  error_recovery.rs  error_recovery_test.rs  error_reporting.rs  lib.rs  performance.rs  performance_optimization.rs  platform.rs  production_verification.rs  property_tests.rs  property_tests_cross_platform.rs  property_tests_dual_mode.rs  property_tests_performance_bounds.rs  property_tests_simple.rs  property_tests_state_preservation.rs  property_tests_zero_overhead.rs  state_preservor.rs  test_utils.rs  ui_component.rs
crates/rustyui-core/tests/: comprehensive_workflow_tests.rs  end_to_end_integration_tests.rs  industry_performance_optimizations.rs  performance_benchmark_tests.rs  property_3_zero_overhead_production.rs  property_end_to_end_tests.rs  simple_production_test.rs  task_12_4_validation.rs  task_13_production_verification.rs
crates/rustyui-interpreter/: Cargo.toml
crates/rustyui-interpreter/benches/: interpretation_performance.rs
crates/rustyui-interpreter/examples/: jit_test.rs
crates/rustyui-interpreter/proptest-regressions/: property_tests.txt
crates/rustyui-interpreter/proptest-regressions/hot_path_detector/: property_tests.txt
crates/rustyui-interpreter/proptest-regressions/optimization_engine/: property_tests.txt
crates/rustyui-interpreter/proptest-regressions/profiling/: property_tests.txt
crates/rustyui-interpreter/proptest-regressions/recompilation_scheduler/: property_tests.txt
crates/rustyui-interpreter/src/: ast_interpreter.rs  benchmarks.rs  error.rs  hot_path_detector.rs  integration_tests.rs  jit_compiler.rs  lib.rs  performance_tuning.rs  property_tests.rs  rhai_interpreter.rs  test_jit.rs  tiered_compilation.rs
crates/rustyui-interpreter/src/hot_path_detector/: mod.rs  property_tests.rs
crates/rustyui-interpreter/src/optimization_engine/: mod.rs  property_tests.rs
crates/rustyui-interpreter/src/profiling/: mod.rs  property_tests.rs
crates/rustyui-interpreter/src/recompilation_scheduler/: mod.rs  property_tests.rs
crates/rustyui-macros/: Cargo.toml
crates/rustyui-macros/src/: lib.rs
docs/: API.md  BUILD.md  PROPERTY_BASED_TESTING.md  TESTING.md  USER_GUIDE.md
examples/: Cargo.toml  basic_interpretation.rs  comprehensive_demo.rs  cross_platform_demo.rs  dev_mode_demo.rs  egui_component_integration.rs  error_recovery_demo.rs  file_watching_demo.rs  hot_reload_demo.rs  intelligent_analysis_demo.rs  performance_optimization_demo.rs  pgo_integration_demo.rs  rhai_only_test.rs  simple_hot_reload_demo.rs  simple_test.rs  state_preservation_demo.rs  test_implementations.rs  ui_interpretation_demo.rs
scripts/: cross_platform_build.bat  cross_platform_build.sh  run_benchmarks.sh  run_property_tests.sh
test-project/: Cargo.toml  rustyui.toml
test-project/src/: button.rs  main.rs
tests/: test_implementations.rs
