[workspace]
members = [
    "crates/rustyui-core",
    "crates/rustyui-interpreter", 
    "crates/rustyui-adapters",
    "crates/rustyui-cli",
    "crates/rustyui-macros",
    "examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iceyxsm/Rustyui"
homepage = "https://github.com/iceyxsm/Rustyui"
authors = ["RustyUI Contributors"]
keywords = ["ui", "gui", "hot-reload", "development", "runtime"]
categories = ["gui", "development-tools", "game-development"]
description = "Revolutionary dual-mode UI development system for Rust with instant feedback and zero production overhead"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
toml = "0.8"

# Macro dependencies
quote = "1.0"
proc-macro2 = "1.0"

# Testing dependencies
proptest = "1.4"
criterion = "0.5"

# Cross-platform dependencies
num_cpus = "1.16"
notify = "6.1"
notify-debouncer-mini = "0.4"

# Platform-specific dependencies - Windows
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "fileapi", "winnt"] }

# Platform-specific dependencies - Unix/Linux
libc = "0.2"

# Platform-specific dependencies - macOS
core-foundation = "0.9"
core-services = "0.2"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
