[package]
name = "rustyui-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_interpretation"
path = "basic_interpretation.rs"
required-features = ["dev-ui"]

[[example]]
name = "file_watching_demo"
path = "file_watching_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "intelligent_analysis_demo"
path = "intelligent_analysis_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "ui_interpretation_demo"
path = "ui_interpretation_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "state_preservation_demo"
path = "state_preservation_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "egui_component_integration"
path = "egui_component_integration.rs"
required-features = ["dev-ui", "egui-adapter"]

[[example]]
name = "dev_mode_demo"
path = "dev_mode_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "cross_platform_demo"
path = "cross_platform_demo.rs"

[[example]]
name = "error_recovery_demo"
path = "error_recovery_demo.rs"
required-features = ["dev-ui"]

[dependencies]
rustyui-core = { path = "../crates/rustyui-core" }
rustyui-adapters = { path = "../crates/rustyui-adapters" }
serde_json = "1.0"

[features]
default = []
dev-ui = ["rustyui-core/dev-ui", "rustyui-adapters/dev-ui"]
egui-adapter = ["rustyui-adapters/egui-adapter"]