[package]
name = "rustyui-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_interpretation"
path = "basic_interpretation.rs"
required-features = ["dev-ui"]

[[example]]
name = "file_watching_demo"
path = "file_watching_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "intelligent_analysis_demo"
path = "intelligent_analysis_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "ui_interpretation_demo"
path = "ui_interpretation_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "state_preservation_demo"
path = "state_preservation_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "egui_component_integration"
path = "egui_component_integration.rs"
required-features = ["dev-ui", "egui-adapter"]

[[example]]
name = "dev_mode_demo"
path = "dev_mode_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "cross_platform_demo"
path = "cross_platform_demo.rs"

[[example]]
name = "error_recovery_demo"
path = "error_recovery_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "hot_reload_demo"
path = "hot_reload_demo.rs"
required-features = ["dev-ui", "egui-adapter"]

[[example]]
name = "simple_hot_reload_demo"
path = "simple_hot_reload_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "comprehensive_demo"
path = "comprehensive_demo.rs"
required-features = ["dev-ui"]

[[example]]
name = "performance_optimization_demo"
path = "performance_optimization_demo.rs"
required-features = ["dev-ui"]

[dependencies]
rustyui-core = { path = "../crates/rustyui-core" }
rustyui-adapters = { path = "../crates/rustyui-adapters" }
rustyui-interpreter = { path = "../crates/rustyui-interpreter" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
eframe = "0.28"
egui = "0.28"
env_logger = "0.11"

[features]
default = []
dev-ui = ["rustyui-core/dev-ui", "rustyui-adapters/dev-ui", "rustyui-interpreter/dev-ui"]
egui-adapter = ["rustyui-adapters/egui-adapter"]