[package]
name = "rustyui-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Framework adapters for RustyUI supporting egui, iced, slint, and tauri"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# UI framework dependencies (optional)
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }
# iced = { version = "0.10", optional = true }
# slint = { version = "1.3", optional = true }
# tauri = { version = "1.5", optional = true }

[features]
default = []
dev-ui = []
egui-adapter = ["egui", "eframe"] # Real egui integration enabled
iced-adapter = [] # ["iced"] - disabled for Phase 1
slint-adapter = [] # ["slint"] - disabled for Phase 1
tauri-adapter = [] # ["tauri"] - disabled for Phase 1
all-adapters = ["egui-adapter", "iced-adapter", "slint-adapter", "tauri-adapter"]
[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.0"
criterion = { workspace = true }