[package]
name = "rustyui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for RustyUI project initialization and development"

[[bin]]
name = "rustyui"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# CLI dependencies
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }

# Internal dependencies
rustyui-core = { path = "../rustyui-core" }

[features]
default = []
dev-ui = ["rustyui-core/dev-ui"]