[package]
name = "rustyui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for RustyUI project initialization and development"

[[bin]]
name = "rustyui"
path = "src/main.rs"

[lib]
name = "rustyui_cli"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# CLI dependencies
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }
ctrlc = "3.4"

# Internal dependencies
rustyui-core = { path = "../rustyui-core" }
rustyui-adapters = { path = "../rustyui-adapters", optional = true }
rustyui-macros = { path = "../rustyui-macros", optional = true }

[features]
default = []
dev-ui = [
    "rustyui-core/dev-ui",
    "rustyui-adapters",
    "rustyui-macros",
]

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }
criterion = { workspace = true }