[package]
name = "rustyui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core dual-mode engine for RustyUI with runtime interpretation and zero-overhead production builds"

[dependencies]
# Core dependencies (always included)
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Development-only dependencies (conditionally compiled)
rhai = { version = "1.16", optional = true }
notify = { version = "6.1", optional = true }
notify-debouncer-mini = { version = "0.4", optional = true }

# Internal dependencies
rustyui-interpreter = { path = "../rustyui-interpreter", optional = true }

[features]
default = []
dev-ui = [
    "rhai",
    "notify",
    "notify-debouncer-mini",
    "rustyui-interpreter/dev-ui"
]