[package]
name = "rustyui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core dual-mode engine for RustyUI with runtime interpretation and zero-overhead production builds"

[dependencies]
# Core dependencies (always included)
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
tempfile = "3.0"

# Development-only dependencies (conditionally compiled)
rhai = { version = "1.16", optional = true }
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
num_cpus = { workspace = true }
regex = { version = "1.10", optional = true }

# Cross-platform system dependencies
[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true, optional = true }
core-services = { workspace = true, optional = true }

# Internal dependencies
rustyui-interpreter = { path = "../rustyui-interpreter", optional = true }

[features]
default = []
dev-ui = [
    "rhai",
    "notify",
    "notify-debouncer-mini",
    "rustyui-interpreter",
    "rustyui-interpreter/dev-ui",
    "regex"
]

# Platform-specific features
windows-native = ["winapi"]
unix-native = ["libc"] 
macos-native = ["core-foundation", "core-services"]

# Cross-platform feature bundle
cross-platform = ["windows-native", "unix-native", "macos-native"]
[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }