[package]
name = "rustyui-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime interpretation system for RustyUI with Rhai scripting and AST parsing"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Development-only dependencies (conditionally compiled)
rhai = { version = "1.16", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
cranelift-jit = { version = "0.101", optional = true }
wasmtime = { version = "13.0", optional = true }

[features]
default = []
dev-ui = [
    "rhai",
    "syn",
    "cranelift-jit",
    "wasmtime"
]