[package]
name = "rustyui-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime interpretation system for RustyUI with Rhai scripting and AST parsing"

[lib]
name = "rustyui_interpreter"
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Development-only dependencies (conditionally compiled)
rhai = { version = "1.16", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }
cranelift-jit = { version = "0.101", optional = true }
wasmtime = { version = "13.0", optional = true }
regex = { version = "1.10", optional = true }
quote = { version = "1.0", optional = true }

# Cross-platform system dependencies for JIT compilation
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach = { version = "0.3", optional = true }

[features]
default = []
dev-ui = [
    "rhai",
    "syn",
    "cranelift-jit",
    "wasmtime",
    "regex",
    "quote"
]

# Platform-specific features for JIT compilation
windows-jit = ["winapi"]
unix-jit = ["libc"]
macos-jit = ["mach"]

# Cross-platform JIT bundle
cross-platform-jit = ["windows-jit", "unix-jit", "macos-jit"]
[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.0"
criterion = { workspace = true }
[[bench]]
name = "interpretation_performance"
harness = false