[package]
name = "rustyui-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for RustyUI hot reload and conditional compilation"

[lib]
proc-macro = true

[dependencies]
# Macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[features]
default = []